removed unnecessary plugins

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -3,9 +3,9 @@ before:
     - go mod download
 
 builds:
-  - id: echo
-    main: cmd/echo/main.go
-    binary: executor_echo_{{ .Os }}_{{ .Arch }}
+  - id: keptn
+    main: cmd/keptn/main.go
+    binary: source_keptn_{{ .Os }}_{{ .Arch }}
 
     no_unique_dist_dir: true
     env: &env
@@ -18,26 +18,6 @@ builds:
       - arm64
     goarm: &goarm
       - 7
-
-  - id: msg
-    main: cmd/msg/main.go
-    binary: executor_msg_{{ .Os }}_{{ .Arch }}
-
-    no_unique_dist_dir: true
-    env: *env
-    goos: *goos
-    goarch: *goarch
-    goarm: *goarm
-
-  - id: ticker
-    main: cmd/ticker/main.go
-    binary: source_ticker_{{ .Os }}_{{ .Arch }}
-
-    no_unique_dist_dir: true
-    env: *env
-    goos: *goos
-    goarch: *goarch
-    goarm: *goarm
 
 snapshot:
   name_template: 'v{{ .Version }}'
